--- a/mealdb.html
+++ b/mealdb.html
@@ -14,6 +14,12 @@
         <button onclick="searchFood()" class="btn btn-outline-secondary" type="button" id="button-search">Search</button>
     </div>
 
+    <!-- error start -->
+    <div id="errormassage" class="p-3 mt-2 mb-3 d-flex justify-content-center text-red">
+        <p id="massage"> </p>
+    </div>
+    <!-- error end -->
+
     <!-- single meal datails -->
 
     <div id="meal-details" class="w-100"></div>
@@ -24,6 +30,6 @@
     </div>
 
     <!-- <script src="mealdb.js"></script> -->
-    <script src="mealbdasync.js"></script>
+    <script src="mealdb.js"></script>
 </body>
 </html>
